--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     target="_blank">Linkedin</a>
             </li>
             <li>
-                <a href="">Github</a>
+                <a href="https://github.com/AmandaCMello/" target="_blank">Github</a>
             </li>
             <li>
                 <a href="https://www.instagram.com/amandac_mello/" target="_blank">Instagram</a>
